--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux-devtools": "3.3.1",
     "shell-path": "2.0.0",
     "webpack": "1.13.1",
+    "webpack-bundle-tracker": "^0.1.0",
     "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
